# Compras

./: .gitignore  build_android.ps1
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/filipevl/compras/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/filipevl/compras/: ComprasApplication.kt  MainActivity.kt  compras_core.kt
android/app/src/main/java/com/filipevl/compras/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/test/java/com/filipevl/compras/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
core/: Cargo.toml
core/migrations/: 01_initial.sql
core/src/: actions.rs  category.rs  errors.rs  lib.rs  product.rs  quantity.rs  shared.rs
core/src/actions/: category_management.rs  inventory_management.rs
core/src/category/: api.rs  database.rs  errors.rs  model.rs
core/src/errors/: init.rs
core/src/product/: model.rs
core/src/quantity/: model.rs
